# windows-imgui-docking-exmaple

./: .gitignore  CMakeLists.txt  README.md
include/datatype/: node.hpp
include/window/: mainwnd.hpp  resources.h
src/: main.cpp  winres.rc
src/window/: mainwnd.cpp
